# archeo

./: AI_digest.prompts.yml  Cargo.toml  README.md  gemma3_4_AI_digest.md  llama3_AI_digest.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  ollama.rs  primer.rs  prompt_defaults.rs  report.rs
src/content_analysis/: analyzer.rs  cli.rs  config.rs  descriptor.rs  extension_rule.rs  mod.rs  parse_mode.rs
src/scanner/: mod.rs  scanner.rs  scanner_config.rs
