[package]
name = "archeo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde =  { version = "1.0.228", features = ["derive"]} 
serde_json = "1"
rust_yaml = { path = "../rust_yaml" }
walkdir = "2.5.0"
