[package]
name = "archeo"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
directories = "5"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
rust_yaml = { path = "../rust_yaml" }
serde =  { version = "1.0.228", features = ["derive"]} 
serde_json = "1"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
